Implement mode based routing instructions. Port ferry instruction over to the new format.

--- a/languages/translations/da.json
+++ b/languages/translations/da.json
@@ -45,9 +45,11 @@
         },
         "modes": {
             "ferry": {
-                "default": "Tag færgen",
-                "name": "Tag færgen {way_name}",
-                "destination": "Tag færgen i retning {destination}"
+                "default": {
+                    "default": "Tag færgen",
+                    "name": "Tag færgen {way_name}",
+                    "destination": "Tag færgen i retning {destination}"
+                }
             }
         },
         "phrase": {
