--- a/languages/translations/es.json
+++ b/languages/translations/es.json
@@ -45,9 +45,11 @@
         },
         "modes": {
             "ferry": {
-                "default": "Coge el ferry",
-                "name": "Coge el ferry {way_name}",
-                "destination": "Coge el ferry a {destination}"
+                "default": {
+                    "default": "Coge el ferry",
+                    "name": "Coge el ferry {way_name}",
+                    "destination": "Coge el ferry a {destination}"
+                }
             }
         },
         "phrase": {
